# python_extension_helloworld_cmake

./: .gitignore  CMakeLists.txt  clear.sh  greet.c  my_cmake.sh  my_cmake_no_setup_path.sh  mymodule.c  noddy4.c  setup_path.sh
py3/: test.py  test_noddy4.py
